# at-tpc

./: README.md  data_1.txt  data_10.txt  data_11.txt  data_12.txt  data_14.txt  data_15.txt  data_16.txt  data_17.txt  data_20.txt  data_22.txt  data_24.txt  data_27.txt  data_28.txt  data_29.txt  data_3.txt  data_30.txt  data_31.txt  data_32.txt  data_33.txt  data_34.txt  data_4.txt  data_5.txt  data_6.txt  data_7.txt  data_8.txt  data_9.txt  gain.C
at-tpc/: CMakeLists.txt  avalanche.cc
output/: Data_information.txt
